--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
+    "colorprint": "^5.0.3",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "fs-extra": "^7.0.1",
     "helmet": "^3.16.0",
     "mongodb": "^3.2.3",
+    "mongoose": "^5.5.3",
     "multer": "^1.4.1"
   },
   "devDependencies": {
