--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
     "colorprint": "^5.0.3",
@@ -18,6 +19,7 @@
     "express-session": "^1.16.1",
     "fs-extra": "^7.0.1",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.3",
     "multer": "^1.4.1"
