--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +36,6 @@
   },
   "devDependencies": {
     "node-sass": "^4.11.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
