package json scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "nodemon": "nodemon index.js",
+    "heroku-postbuild": "cd client && npm i && npm run build",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
