--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^7.0.1",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.3",
     "multer": "^1.4.1"
